Update Next Project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="#wedding">Wedding</a>
         <a href="#prewed">Pre-Wedding</a>
         <a href="#document">Dokumentasi</a>
+        <a href="#package">Paket</a>
         <a href="#contact">Kontak</a>
       </div>
 
@@ -82,34 +83,35 @@
           <img src="img/wedding/w2.jpg" alt="2" class="wedding-card-img" />
         </div>
       </div>
+      <!--
       <p>
         Pilih Paket yang Tepat untuk Momen Anda. Kami menawarkan berbagai paket fotografi dan videografi dengan harga terjangkau.
       </p>
       <div class="row">
         <div class="wedding-price">
-            <h3>Paket Basic</h3>
-            <h3>Rp 1.000.000</h3>
-            <p>Fotografi acara selama 3 jam</p>
-            <p>30 foto hasil edit profesional</p>
-            <p>Semua file dalam format digital</p>
+            <h3>Paket 1</h3>
+            <h3>Rp 3.500.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+ dan 16R+</p>
+            <p>Album Jumbo</p>
+            <p>Video Sinematik</p>
         </div>
         <div class="wedding-price">
-            <h3>Paket Premium</h3>
-            <h3>Rp 2.000.000</h3>
-            <p>Fotografi & videografi acara selama 5 jam</p>
-            <p>50 foto hasil edit profesional</p>
-            <p>Video highlight 2–3 menit</p>
-            <p>Semua file dalam format digital</p>
+            <h3>Paket 2</h3>
+            <h3>Rp 2.500.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+</p>
+            <p>Album Jumbo</p>
         </div>
         <div class="wedding-price">
-            <h3>Paket Ultimate</h3>
-            <h3>Rp 3.000.000</h3>
-            <p>Fotografi & videografi acara selama 8 jam</p>
-            <p>100 foto hasil edit profesional</p>
-            <p>Video highlight 5 menit</p>
-            <p>Semua file dalam format digital</p>
+            <h3>Paket 3</h3>
+            <h3>Rp 1.800.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+</p>
+            <p>Album Biasa</p>
         </div>
       </div>
+      -->
     </section>
     <!-- wedding Section end -->
 
@@ -127,32 +129,35 @@
                 <img src="img/prewed/pw2.jpg" alt="2" class="prewed-card-img" />
             </div>
         </div>
+        <!--
         <p>
             Pilih Paket yang Tepat untuk Momen Anda. Kami menawarkan berbagai paket fotografi dan videografi dengan harga terjangkau.
         </p>
         <div class="row">
-        <div class="prewed-price">
-            <h3>Paket Basic</h3>
-            <h3>Rp 1.000.000</h3>
-            <p>Pemotretan selama 2 jam di 1 lokasi</p>
-            <p>20 foto hasil edit profesional</p>
-            <p>Semua file dalam format digital</p>
+          <div class="prewed-price">
+              <h3>Paket Basic</h3>
+              <h3>Rp 1.000.000</h3>
+              <p>Pemotretan selama 2 jam di 1 lokasi</p>
+              <p>20 foto hasil edit profesional</p>
+              <p>Semua file dalam format digital</p>
+          </div>
+          <div class="prewed-price">
+              <h3>Paket Premium</h3>
+              <h3>Rp 2.000.000</h3>
+              <p>Pemotretan selama 4 jam di 1 lokasi</p>
+              <p>50 foto hasil edit profesional</p>
+              <p>Semua file dalam format digital</p>
+          </div>
+          <div class="prewed-price">
+              <h3>Paket Ultimate</h3>
+              <h3>Rp 3.000.000</h3>
+              <p>Pemotretan selama 6 jam di 2 lokasi</p>
+              <p>80 foto hasil edit profesional</p>
+              <p>Semua file dalam format digital</p>
+              <p>1 album foto standar</p>
+          </div>
         </div>
-        <div class="prewed-price">
-            <h3>Paket Premium</h3>
-            <h3>Rp 2.000.000</h3>
-            <p>Pemotretan selama 4 jam di 1 lokasi</p>
-            <p>50 foto hasil edit profesional</p>
-            <p>Semua file dalam format digital</p>
-        </div>
-        <div class="prewed-price">
-            <h3>Paket Ultimate</h3>
-            <h3>Rp 3.000.000</h3>
-            <p>Pemotretan selama 6 jam di 2 lokasi</p>
-            <p>80 foto hasil edit profesional</p>
-            <p>Semua file dalam format digital</p>
-            <p>1 album foto standar</p>
-        </div>
+        -->
     </section>
     <!-- Pre-Wedding Section end -->
 
@@ -170,6 +175,7 @@
                 <img src="img/document/d2.jpg" alt="2" class="document-card-img" />
             </div>
         </div>
+        <!--
         <p>
             Pilih Paket yang Tepat untuk Momen Anda. Kami menawarkan berbagai paket fotografi dan videografi dengan harga terjangkau.
         </p>
@@ -196,8 +202,43 @@
             <p>Video highlight 3 menit</p>
             <p>Semua file dalam format digital</p>
         </div>
+        </div>
+        -->
     </section>
     <!-- Document Section end -->
+
+    <!-- Package Section start -->
+    <section id="package" class="package">
+      <h2>Pilihan <span>Paket</span></h2>
+      <p>
+        Pilih Paket yang Tepat untuk Momen Anda. Kami menawarkan berbagai paket fotografi dan videografi dengan harga terjangkau.
+      </p>
+      <div class="row">
+        <div class="package-price">
+            <h3>Paket 1</h3>
+            <h3>Rp 3.500.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+ dan 16R+</p>
+            <p>Album Jumbo</p>
+            <p>Video Sinematik</p>
+        </div>
+        <div class="package-price">
+            <h3>Paket 2</h3>
+            <h3>Rp 2.500.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+</p>
+            <p>Album Jumbo</p>
+        </div>
+        <div class="package-price">
+            <h3>Paket 3</h3>
+            <h3>Rp 1.800.000</h3>
+            <p>Cetak Foto 4R</p>
+            <p>Cetak Foto 20R+</p>
+            <p>Album Biasa</p>
+        </div>
+      </div>
+    </section>
+    <!-- Package Section end -->
 
     <!-- Contact Section start -->
     <section id="contact" class="contact">
